--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,9 @@
 :root {
-  --color-base-background: #111;
-  --color-base-background-lighter: #24242d;
-  --color-base-text: #fff;
-  --color-base-text-lighter: rgba(212, 231, 241, 0.6);
+  --color-base-background: #f8f8ff;
+  --color-base-background-lighter: #9a9aaf;
+  --color-base-text: #303032;
+  --color-base-text-lighter: rgb(160, 160, 179);
   --color-border: rgba(115, 125, 130, 0.4);
-  --color-primary-background: #9060ff;
-  --color-primary-text: #b494ff;
+  --color-primary-background: #162e4c;
+  --color-primary-text: #244f82;
 }
