--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,9 @@
 :root {
   --color-base-background: #f8f8ff;
-  --color-base-background-lighter: #9a9aaf;
+  --color-base-background-lighter: #dadae7;
   --color-base-text: #303032;
   --color-base-text-lighter: rgb(160, 160, 179);
   --color-border: rgba(115, 125, 130, 0.4);
-  --color-primary-background: #9a9aaf;
-  --color-primary-text: #5c5c79;
+  --color-primary-background: #162e4c;
+  --color-primary-text: #244f82;
 }
