--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 :root {
   --color-base-background: #f8f8ff;
-  --color-base-background-lighter: #dadae7;
+  --color-base-background-lighter: #eeeefc;
   --color-base-text: #303032;
   --color-base-text-lighter: rgb(160, 160, 179);
   --color-border: rgba(115, 125, 130, 0.4);
